# flights-dataportal

./: .gitignore  CLAUDE.md  README.md
catalog-sync/: README.md  publish_to_openmetadata.py  pyproject.toml
dataloader_v2/: CLAUDE.md
dataloader_v2/catalog/: README.md  odcs.yaml
dataloader_v2/catalog-sync/: load-env.sh
dataloader_v2/infra/: main.tf  outputs.tf  terraform.tfvars.example
dataloader_v2/ingestion/: load_flights.py  pyproject.toml
dataloader_v2/scripts/: openmetadata.sh
infra/: variables.tf
ingestion/: README.md
odcs-contracts/: README.md  flights.yaml
sdk/: README.md  dataloader.py  main.py  pyproject.toml
transformation/: .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
transformation/models/marts/: avg_delay_by_carrier.sql  avg_delay_by_carrier.yml
transformation/models/sources/: flights_source.yml
